--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Billy Zimmerman | Web Developer</title>
+    <title>Billy's Computer World' | Web Developer</title>
     <link rel="stylesheet" href="styles.css" />
     <!-- Add favicon -->
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
@@ -64,11 +64,11 @@
                 </div>
                 <div class="back">
                   <p>
-                    I specialize in building websites that convert visitors into
-                    customers. Whether you need a brand new site, a redesign of
+                    I specialize in building websites on the Shopify e-commerce
+                    platform. Whether you need a brand new site, a redesign of
                     your current one, or specific improvements like mobile
-                    optimization or SEO, I deliver solutions that help your
-                    business grow.
+                    optimization, I can deliver solutions that help your
+                    business grow and look good!
                   </p>
                 </div>
               </div>
@@ -93,7 +93,11 @@
 
         <section class="process-section">
           <h2>My Process</h2>
-          <p class="body">testing for words</p>
+          <p class="body">
+            I am just getting started in my side business for building websites,
+            in full transparency I want to be clear I have years of experience
+            working full time in web development but this will be the f
+          </p>
           <div class="process-steps">
             <div class="process-step">
               <div class="step-icon">1</div>
@@ -251,6 +255,30 @@
                 <div class="project-content">
                   <h3>Noonday</h3>
                   <p>Took full lead on the rebuild of Noondays new website.</p>
+                  <span class="project-link">
+                    View Project
+                    <i class="fas fa-arrow-right" aria-hidden="true"></i>
+                  </span>
+                </div>
+              </div>
+            </a>
+            <a
+              href="https://www.itsa2000sparty.com/"
+              class="project-card-link"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="Link to It's A 2000's Party website to reference my work - opens in new tab"
+            >
+              <div class="project-card">
+                <div
+                  class="project-image"
+                  style="background-image: url('assets/img/itsa.jpg')"
+                  role="img"
+                  aria-label="Screenshot of City Dental Care website"
+                ></div>
+                <div class="project-content">
+                  <h3>It's a 2000's Party</h3>
+                  <p>I had fun on this rebuild for It's A 2000's Party Site.</p>
                   <span class="project-link">
                     View Project
                     <i class="fas fa-arrow-right" aria-hidden="true"></i>
