pushing updates at eod, looking good bro

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="header-content">
         <div class="header-image">
           <img
-            src="assets/img/BCW-Logo.png"
+            src="assets/img/BCW2.png"
             alt="Billy Zimmerman - Web Developer"
           />
         </div>
@@ -36,7 +36,7 @@
     </header>
     <div class="page-width">
       <div class="sub-banner-container gradient-linear gradient-subtle">
-        <section class="flip-card-section">
+        <section class="flip-card-section color-2">
           <h2>How I Can Help Your Business</h2>
           <div class="cards-container">
             <div class="about-me-container">
@@ -91,7 +91,7 @@
           </div>
         </section>
 
-        <section class="process-section">
+        <section class="process-section color-1">
           <h2>My Process</h2>
           <p class="body">
             I am just getting started in my side business for building websites,
@@ -134,7 +134,7 @@
           </div>
         </section>
 
-        <section class="flip-card-section">
+        <section class="flip-card-section color-2">
           <h2>Pricing</h2>
           <p class="body">
             Before we start working together it is important to map out the
@@ -179,7 +179,7 @@
           </div>
         </section>
 
-        <section class="projects" id="projects">
+        <section class="projects color-1" id="projects">
           <h2>Recent Projects & Builds</h2>
           <div class="project-container">
             <a
@@ -374,7 +374,7 @@
           </div>
         </section>
 
-        <section class="services">
+        <section class="services color-3">
           <h2>Services for Great Falls Businesses</h2>
           <div class="service-cards">
             <div class="service-card">
