pushing before big update to header

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             <a href="#contact" class="cta-button">Get a Free Website Audit</a>
           </div>
         </div>
+      <p> add anchor links to the top right</p>
+      </div>
       </div>
     </header>
     <div class="page-width">
@@ -96,7 +98,9 @@
           <p class="body">
             I am just getting started in my side business for building websites,
             in full transparency I want to be clear I have years of experience
-            working full time in web development but this will be the f
+            working full time in web development but this will be the first time
+            I have done freelance work, I have been building shops on wix and
+            shopify for over 10 years now.
           </p>
           <div class="process-steps">
             <div class="process-step">
@@ -179,114 +183,138 @@
           </div>
         </section>
 
-        <section class="projects color-1" id="projects">
-          <h2>Recent Projects & Builds</h2>
-          <div class="project-container">
-            <a
-              href="https://example.com/smiths-bakery-project"
-              class="project-card-link"
-              target="_blank"
-              rel="noopener noreferrer"
-              aria-label="View Smith's Bakery project details - opens in new tab"
-            >
-              <div class="project-card">
-                <div
-                  class="project-image"
-                  style="background-image: url('assets/img/KU.jpg')"
-                  role="img"
-                  aria-label="Screenshot of Smith's Bakery website redesign"
-                ></div>
-                <div class="project-content">
-                  <h3>Keith Urban</h3>
-                  <p>
-                    Redesigned website for new album and world tour, helped
-                    create custom solutions to accommodate their mock up
-                    request.
-                  </p>
-                  <span class="project-link">
-                    View Project
-                    <i class="fas fa-arrow-right" aria-hidden="true"></i>
-                  </span>
-                </div>
-              </div>
-            </a>
-
-            <a
-              href="https://example.com/green-thumb-landscaping-project"
-              class="project-card-link"
-              target="_blank"
-              rel="noopener noreferrer"
-              aria-label="View Green Thumb Landscaping project details - opens in new tab"
-            >
-              <div class="project-card">
-                <div
-                  class="project-image"
-                  style="background-image: url('assets/img/TPC.jpeg')"
-                  role="img"
-                  aria-label="Screenshot of Green Thumb Landscaping website"
-                ></div>
-                <div class="project-content">
-                  <h3>The Pet Collective</h3>
-                  <p>
-                    Migrated over their original website to their new theme,
-                  </p>
-                  <span class="project-link">
-                    View Project
-                    <i class="fas fa-arrow-right" aria-hidden="true"></i>
-                  </span>
-                </div>
-              </div>
-            </a>
-
-            <a
-              href="https://example.com/city-dental-care-project"
-              class="project-card-link"
-              target="_blank"
-              rel="noopener noreferrer"
-              aria-label="Link to Noondays website to reference my work - opens in new tab"
-            >
-              <div class="project-card">
-                <div
-                  class="project-image"
-                  style="background-image: url('assets/img/ND.jpeg')"
-                  role="img"
-                  aria-label="Screenshot of City Dental Care website"
-                ></div>
-                <div class="project-content">
-                  <h3>Noonday</h3>
-                  <p>Took full lead on the rebuild of Noondays new website.</p>
-                  <span class="project-link">
-                    View Project
-                    <i class="fas fa-arrow-right" aria-hidden="true"></i>
-                  </span>
-                </div>
-              </div>
-            </a>
-            <a
-              href="https://www.itsa2000sparty.com/"
-              class="project-card-link"
-              target="_blank"
-              rel="noopener noreferrer"
-              aria-label="Link to It's A 2000's Party website to reference my work - opens in new tab"
-            >
-              <div class="project-card">
-                <div
-                  class="project-image"
-                  style="background-image: url('assets/img/itsa.jpg')"
-                  role="img"
-                  aria-label="Screenshot of City Dental Care website"
-                ></div>
-                <div class="project-content">
-                  <h3>It's a 2000's Party</h3>
-                  <p>I had fun on this rebuild for It's A 2000's Party Site.</p>
-                  <span class="project-link">
-                    View Project
-                    <i class="fas fa-arrow-right" aria-hidden="true"></i>
-                  </span>
-                </div>
-              </div>
-            </a>
+      <section class="projects color-1" id="projects">
+      <h2>Recent Projects & Builds</h2>
+      <div class="project-container">
+        <a
+          href="https://example.com/smiths-bakery-project"
+          class="project-card-link"
+          target="_blank"
+          rel="noopener noreferrer"
+          aria-label="View Smith's Bakery project details - opens in new tab"
+        >
+          <div class="project-card">
+            <div
+              class="project-image"
+              style="background-image: url('assets/img/KU.jpg')"
+              role="img"
+              aria-label="Screenshot of Smith's Bakery website redesign"
+            ></div>
+            <div class="project-content">
+              <h3>Keith Urban</h3>
+              <p>
+                Redesigned website for new album and world tour, helped
+                create custom solutions to accommodate their mock up
+                request.
+              </p>
+              <span class="project-link">
+                View Project
+                <i class="fas fa-arrow-right" aria-hidden="true"></i>
+              </span>
+            </div>
           </div>
+        </a>
+
+        <a
+          href="https://example.com/green-thumb-landscaping-project"
+          class="project-card-link"
+          target="_blank"
+          rel="noopener noreferrer"
+          aria-label="View Green Thumb Landscaping project details - opens in new tab"
+        >
+          <div class="project-card">
+            <div
+              class="project-image"
+              style="background-image: url('assets/img/TPC.jpeg')"
+              role="img"
+              aria-label="Screenshot of Green Thumb Landscaping website"
+            ></div>
+            <div class="project-content">
+              <h3>The Pet Collective</h3>
+              <p>
+                Migrated over their original website to their new theme,
+              </p>
+              <span class="project-link">
+                View Project
+                <i class="fas fa-arrow-right" aria-hidden="true"></i>
+              </span>
+            </div>
+          </div>
+        </a>
+
+        <a
+          href="https://example.com/city-dental-care-project"
+          class="project-card-link"
+          target="_blank"
+          rel="noopener noreferrer"
+          aria-label="Link to Noondays website to reference my work - opens in new tab"
+        >
+          <div class="project-card">
+            <div
+              class="project-image"
+              style="background-image: url('assets/img/ND.jpeg')"
+              role="img"
+              aria-label="Screenshot of City Dental Care website"
+            ></div>
+            <div class="project-content">
+              <h3>Noonday</h3>
+              <p>Took full lead on the rebuild of Noondays new website.</p>
+              <span class="project-link">
+                View Project
+                <i class="fas fa-arrow-right" aria-hidden="true"></i>
+              </span>
+            </div>
+          </div>
+        </a>
+
+        <a
+          href="https://www.itsa2000sparty.com/"
+          class="project-card-link"
+          target="_blank"
+          rel="noopener noreferrer"
+          aria-label="Link to It's A 2000's Party website to reference my work - opens in new tab"
+        >
+          <div class="project-card">
+            <div
+              class="project-image"
+              style="background-image: url('assets/img/itsa.jpg')"
+              role="img"
+              aria-label="Screenshot of City Dental Care website"
+            ></div>
+            <div class="project-content">
+              <h3>It's a 2000's Party</h3>
+              <p>I had fun on this rebuild for It's A 2000's Party Site.</p>
+              <span class="project-link">
+                View Project
+                <i class="fas fa-arrow-right" aria-hidden="true"></i>
+              </span>
+            </div>
+          </div>
+        </a>
+      </div>
+      
+      <!-- View All Projects Button -->
+      <button class="view-all-btn" id="viewAllBtn">
+        <i class="fas fa-grid-3x3"></i> View More Projects
+      </button>
+    </section>
+
+    <!-- Popup Overlay -->
+    <div class="popup-overlay" id="popupOverlay">
+      <div class="popup-content">
+        <div class="popup-header">
+          <h2>More sites I have built or contribute to</h2>
+          <button class="close-btn" id="closeBtn">
+            <i class="fas fa-times"></i>
+          </button>
+        </div>
+        <div class="popup-body">
+          <div class="project-grid" id="projectGrid">
+            <!-- Projects will be dynamically added here -->
+          </div>
+        </div>
+      </div>
+    </div>
         </section>
 
         <!-- <section class="testimonials">
@@ -343,7 +371,7 @@
       </section> -->
 
         <section class="skills-section">
-          <h2>Skills & Technologies</h2>
+          <h2>Skills & Experience</h2>
           <div class="skill-categories">
             <div class="skill-category">
               <h3>Frontend</h3>
@@ -374,7 +402,7 @@
           </div>
         </section>
 
-        <section class="services color-3">
+        <section class="services color-1">
           <h2>Services for Great Falls Businesses</h2>
           <div class="service-cards">
             <div class="service-card">
