pushung todays update, need to figure out more of the js for the text ticker, I want it to pause on hover

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Billy's Computer World' | Web Developer</title>
     <link rel="stylesheet" href="styles.css" />
     <!-- Add favicon -->
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="assets/img/bcw2.png" />
     <!-- Font Awesome for icons -->
     <link
       rel="stylesheet"
@@ -71,6 +71,21 @@
                     your current one, or specific improvements like mobile
                     optimization, I can deliver solutions that help your
                     business grow and look good!
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="about-me-container">
+              <div class="card">
+                <div class="front">
+                  <i class="fa-solid fa-question"></i>
+                  <h3>Why Did I Contact You</h3>
+                </div>
+                <div class="back">
+                  <p>
+                    I discovered your shop like I do anything else, with a
+                    google search. You may need a website or possibly a update
+                    to your current site.
                   </p>
                 </div>
               </div>
@@ -185,6 +200,8 @@
 
       <section class="projects color-1" id="projects">
       <h2>Recent Projects & Builds</h2>
+      <p class="body project-body">
+       At my day job I have the honor to work on some some sites for big brands and bands from around the world, My hand in these builds varies from full build to contributing to specific pages, features or sections. I am not the designer and I did not set up the products, my role is to take the designs and make them a reality, I am not the owner of these sites but I have worked on them and can provide references if needed.
       <div class="project-container">
         <a
           href="https://example.com/smiths-bakery-project"
@@ -303,7 +320,7 @@
     <div class="popup-overlay" id="popupOverlay">
       <div class="popup-content">
         <div class="popup-header">
-          <h2>More sites I have built or contribute to</h2>
+          <h2>More Sites I have built or contribute to the </h2>
           <button class="close-btn" id="closeBtn">
             <i class="fas fa-times"></i>
           </button>
@@ -371,7 +388,7 @@
       </section> -->
 
         <section class="skills-section">
-          <h2>Skills & Experience</h2>
+          <h2>Skills & Technologies</h2>
           <div class="skill-categories">
             <div class="skill-category">
               <h3>Frontend</h3>
@@ -428,8 +445,48 @@
           </div>
         </section>
       </div>
+      <div>
+            <div class="pricing-ticker-container">
+                <div class="ticker-wrapper">
+                    <h2 class="text-ticker">Big discounts for 1st Three Clients • Special Offers Available • Limited Time Only • Contact Billy Today • Pricing Details Below • Special Offers Available • Free 15 Minute Consultation • Big discounts for 1st Three Clients • Special Offers Available • Limited Time Only • Contact Billy Today • Pricing Details Below • Special Offers Available • Free 15 Minute Consultation Big discounts for 1st Three Clients • Special Offers Available • Limited Time Only • Contact Billy Today • Pricing Details Below • Special Offers Available • Free 15 Minute Consultation • Big discounts for 1st Three Clients • Special Offers Available • Limited Time Only • Contact Billy Today • Pricing Details Below • Special Offers Available • Free 15 Minute Consultation Big discounts for 1st Three Clients • Special Offers Available • Limited Time Only • Contact Billy Today • Pricing Details Below • Special Offers Available • Free 15 Minute Consultation • Big discounts for 1st Three Clients • Special Offers Available • Limited Time Only • Contact Billy Today • Pricing Details Below • Special Offers Available • Free 15 Minute Consultation</h2>
+                </div>
+            </div>
+      </div>
+        <div>
+        <section class="call-to-action color-3">
+        <h2>Lets Talk Pricing!</h2>
+        <div class="body pricing-details-text"> 
+        <p class="pricing-intro">
+          I offer competitive pricing tailored to your specific needs. Here are
+          some general guidelines:
+        </p>
+        <ul class="pricing-list">
+          <ol>
+            <strong>New Website Build:</strong> Starting at $1,500
+          </ol>
+          <ol>
+            <strong>Website Redesign:</strong> Starting at $1,000
+          </ol>
+          <ol>
+            <strong>Mobile Optimization:</strong> Starting at $500
+          </ol>
+          <ol>
+            <strong>Local SEO Optimization:</strong> Starting at $300
+          </ol>
+        </ul>
+        <p class="pricing-note">
+          Prices may vary based on the complexity and specific requirements of
+          your project. Let's discuss your needs in detail to provide a more
+          accurate quote.
+        </p>
+        </div>
+      </section>
 
-      <section class="contact" id="contact">
+
+        </div>
+      
+      </div>
+      <!-- <section class="contact" id="contact">
         <h2>Get Your Free Website Audit</h2>
         <p class="contact-intro">
           Want to know how your website can perform better? Fill out the form
@@ -486,11 +543,11 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
     </div>
   </body>
 
-  <footer>
+  <footer class="color-4">
     <p>&copy; 2025 Billy Zimmerman Web Development. All rights reserved.</p>
     <p>Proudly serving small businesses in Great Falls, MT</p>
   </footer>
