pushing before updating code with removing unused js and css

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     <div class="page-width">
       <div class="sub-banner-container gradient-linear gradient-subtle">
-        <section class="how-i-can-help flip-card-section color-2">
+        <section class="how-i-can-help flip-card-section white-bg">
           <h2>How I Can Help Your Business</h2>
           <div class="slider-container">
             <div class="cards-container" id="cardsContainer">
@@ -101,13 +101,11 @@
                   <div class="back">
                     <p>
                       Hello, I'm Billy Zimmerman, a web developer with 5+ years
-                      of experience specializing in building high-quality
-                      websites for artists and brands worldwide. Through my
+                      of experience in building websites. Through my
                       full-time work, I've honed my skills in creating
                       functional, visually appealing sites that perform
                       seamlessly across all devices. I'm now offering freelance
-                      services to help more businesses establish their strong
-                      online presence and achieve their digital goals.
+                      services to help more businesses establish their online presence and achieve their digital goals.
                     </p>
                   </div>
                 </div>
@@ -233,7 +231,7 @@
           </div>
         </section>
 
-        <section id="pricing" class="cards color-2">
+        <section id="pricing" class="cards color-2 white-bg">
           <h2>Pricing</h2>
           <div class="cards">
             <p class="body">
@@ -431,7 +429,7 @@
         </div>
 
         <section id="goals-and-expectations">
-          <div class="container color-1 big-padding">
+          <div class="container color-1  big-padding">
             <div class="section goals">
               <h2>Goals</h2>
               <ul class="bullet-list">
