pushing what is close to my last style updates for all screen sizes, now I need to update the content

--- a/index.html
+++ b/index.html
@@ -166,22 +166,22 @@
             </div>
 
             <!-- Navigation (only visible on tablet/mobile) -->
-            <div class="slider-nav" id="sliderNav" style="display: none">
+            <!-- <div class="slider-nav" id="sliderNav" style="display: none">
               <button class="nav-btn" id="prevBtn">
                 <i class="fas fa-chevron-left"></i>
               </button>
               <button class="nav-btn" id="nextBtn">
                 <i class="fas fa-chevron-right"></i>
               </button>
-            </div>
+            </div> -->
 
             <!-- Dots indicator -->
-            <div
+            <!-- <div
               class="slider-dots"
               id="sliderDots"
               style="display: none"
             ></div>
-          </div>
+          </div> -->
         </section>
 
         <section id="process" class="process-section color-1">
